<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_produto"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:paddingStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/preco_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_do_produto"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/descricao_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao_do_produto"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome_produto"/>


</androidx.constraintlayout.widget.ConstraintLayout>